<resources>
    <string name="app_name">Inventory Stage 1</string>
    <string name="supplier_s_name">Supplier`s Name</string>
    <string name="supplier_s_phone">Supplier`s Phone</string>
    <string name="insert_book">Insert Book</string>
    <string name="price">Price €</string>
    <string name="quantity">Quantity</string>
    <string name="enter_the_title_of_the_book">Enter the Title of the book</string>
</resources>
