<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventorystage1.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_margin="8dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="4dp">
        <LinearLayout
            android:id="@+id/linerLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/bookName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:hint="@string/enter_the_title_of_the_book" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <EditText
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/quantity" />
                <View
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/price"
                    android:gravity="center_horizontal"
                    android:id="@+id/quantity" />
            </LinearLayout>
            <EditText
                android:id="@+id/supplierName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/supplier_s_name" />
            <EditText
                android:id="@+id/supplierPhone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/supplier_s_phone" />
            <Button
                android:id="@+id/btnAdd"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:text="@string/insert_book" />
        </LinearLayout>
        <TextView
            android:id="@+id/display"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/linerLayoutTop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="In Store:" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
